--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,10 @@
 	},
 	"require": {
 		"composer/installers": "~1.0",
-		"php": ">=5.3.0"
-	}
+		"php": ">=5.3.0",
+		"phpunit/phpunit": "6.1.0"
+	},
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    }
 }
