--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"description": "BuddyPress adds community features to WordPress. Member Profiles, Activity Streams, Direct Messaging, Notifications, and more!",
 	"devDependencies": {
-		"grunt": "^1.0.2",
+		"grunt": "^1.0.3",
 		"grunt-check-dependencies": "~1.0.0",
 		"grunt-checktextdomain": "~1.0.1",
 		"grunt-contrib-clean": "~1.1.0",
@@ -13,7 +13,7 @@
 		"grunt-contrib-watch": "^1.1.0",
 		"grunt-exec": "~2.0.0",
 		"grunt-jsvalidate": "~0.2.2",
-		"grunt-legacy-util": "^1.0.0",
+		"grunt-legacy-util": "^1.1.1",
 		"grunt-patch-wordpress": "^1.0.0",
 		"grunt-rtlcss": "~2.0.1",
 		"grunt-sass": "~2.0.0",
@@ -29,5 +29,7 @@
 	},
 	"license": "GPL-2.0-or-later",
 	"version": "3.1.0",
-	"dependencies": {}
+	"dependencies": {
+		"node-sass": "^4.10.0"
+	}
 }
