--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,7 @@
 {
 	"boss": true,
 	"curly": true,
-	"eqeqeq": true,
+	"eqeqeq": false,
 	"eqnull": true,
 	"es3": true,
 	"expr": true,
@@ -13,12 +13,14 @@
 
 	"browser": true,
 	"devel": true,
+  	"maxerr": 99999999,
 
 	"globals": {
 		"_": false,
 		"ajaxurl": false,
 		"Backbone": false,
 		"jQuery": false,
-		"wp": false
+		"wp": false,
+		"BP_Nouveau": false
 	}
 }
