forums - media edit changes

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,13 +3,13 @@
 	"curly": true,
 	"eqeqeq": false,
 	"eqnull": true,
-	"es3": true,
 	"expr": true,
 	"immed": true,
 	"noarg": true,
 	"quotmark": "single",
 	"undef": true,
 	"unused": true,
+	"esversion": 6,
 
 	"browser": true,
 	"devel": true,
