--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"grunt-check-dependencies": "~1.0.0",
 		"grunt-checktextdomain": "~1.0.1",
 		"grunt-contrib-clean": "~1.1.0",
+		"grunt-contrib-compress": "^1.5.0",
 		"grunt-contrib-copy": "~1.0.0",
 		"grunt-contrib-cssmin": "^2.2.1",
 		"grunt-contrib-imagemin": "^2.0.1",
