--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ git:
   depth: 10
 
 php:
+  - 7.3
   - 7.2
   - 5.6
 
@@ -26,36 +27,34 @@ php:
 # x.y mirrors the latest from the x.y branch
 env:
   - WP_VERSION=master BP_TRAVISCI=travis:phpunit
+  - WP_VERSION=5.2 BP_TRAVISCI=travis:phpunit
+  - WP_VERSION=5.1 BP_TRAVISCI=travis:phpunit
+  - WP_VERSION=5.0 BP_TRAVISCI=travis:phpunit
   - WP_VERSION=4.9 BP_TRAVISCI=travis:phpunit
   - WP_VERSION=4.8 BP_TRAVISCI=travis:phpunit
   - WP_VERSION=4.7 BP_TRAVISCI=travis:phpunit
-  - WP_VERSION=4.6 BP_TRAVISCI=travis:phpunit
-  - WP_VERSION=4.5 BP_TRAVISCI=travis:phpunit
 
 matrix:
   include:
-    - php: 7.2
+    - php: 7.3
       env: WP_VERSION=master BP_TRAVISCI=travis:grunt
-    - php: 5.3
-      env: WP_VERSION=master BP_TRAVISCI=travis:phpunit
-      dist: precise
+    - php: 7.3
+      env: WP_VERSION=master BP_TRAVISCI=travis:phpcompat
     - php: 5.3
       env: WP_VERSION=4.8 BP_TRAVISCI=travis:phpunit
       dist: precise
     - php: 5.3
       env: WP_VERSION=4.7 BP_TRAVISCI=travis:phpunit
       dist: precise
-    - php: 5.3
-      env: WP_VERSION=4.6 BP_TRAVISCI=travis:phpunit
-      dist: precise
-    - php: 5.3
-      env: WP_VERSION=4.5 BP_TRAVISCI=travis:phpunit
-      dist: precise
   exclude:
-    - php: 7.2
-      env: WP_VERSION=4.6 BP_TRAVISCI=travis:phpunit
-    - php: 7.2
-      env: WP_VERSION=4.5 BP_TRAVISCI=travis:phpunit
+    - php: 7.3
+      env: WP_VERSION=4.9 BP_TRAVISCI=travis:phpunit
+    - php: 7.3
+      env: WP_VERSION=4.8 BP_TRAVISCI=travis:phpunit
+    - php: 7.3
+      env: WP_VERSION=4.7 BP_TRAVISCI=travis:phpunit
+    - php: 7.3
+      env: WP_VERSION=master BP_TRAVISCI=travis:phpunit
 
 # before_install: Failures in this section will result in build status 'errored'
 before_install:
@@ -107,8 +106,9 @@ before_install:
 # before_script: Failures in this section will result in build status 'errored'
 before_script:
   - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.3" ]]; then composer global require --dev phpunit/phpunit ^4; fi
-  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.6" ]]; then composer global require --dev phpunit/phpunit ^5; fi
-  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.2" ]]; then composer global require --dev phpunit/phpunit ^6; fi
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.6" ]]; then composer global require --dev phpunit/phpunit ^5; composer install; fi
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.2" ]]; then composer global require --dev phpunit/phpunit ^6; composer install; fi
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.3" ]]; then composer global require --dev phpunit/phpunit ^6; composer install; fi
   - mkdir -p /tmp/node/node_modules
   - ln -s /tmp/node/node_modules $plugin_dir/node_modules
   - npm install
@@ -118,11 +118,3 @@ script: grunt $BP_TRAVISCI
 
 notifications:
   email: false
-
-  irc:
-    channels:
-      - secure: "Z+gAlyOafrw0Xg294np+7IpqOKTsswGjAWyOZsbzT7Xo8uY1nmz8tTuU50Gpo8jo5HQqG9G0QgI3zB3Cxy3M5dF+J5oLl1lBz1zL0mtHiq1HoXi2cbVnGCCpxtMvYII6UmPUGAg8zvNUQol+cw1jb3PzLwEDfGcDH64o/Z3j8Gg="
-    template:
-      - "Build %{build_number} (%{branch} - %{commit}): %{message} %{build_url}"
-  slack:
-    secure: JQT+HWoVhLzoG00HmJscYZO+Gy7ywnIlrUbCaI7DxFdFOIkKxsTLLq9cKE4y3VqgZAARTOKjP1eQ7a5OEg1vT11Ow+rB7iUAMNmITxXO4feTOx1i2673xRNBro/SZMhlLd7DY2erbMDZaG9hBQB4xLXRYOvP29pLxf5zTSyZMyE=
