--- a/package.json
+++ b/package.json
@@ -31,7 +31,5 @@
 	},
 	"license": "GPL-2.0-or-later",
 	"version": "3.1.0",
-	"dependencies": {
-		"grunt-cli": "^1.3.2"
-	}
+	"dependencies": {}
 }
