composer.json metadata

--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "buddypress/buddypress",
+    "name": "buddyboss/buddyboss-platform",
     "description": "The BuddyBoss Platform adds community features to WordPress. Member Profiles, Activity Feeds, Direct Messaging, Notifications, and more!",
     "type": "wordpress-plugin",
     "keywords": ["activity", "community", "friends", "groups", "messaging", "notifications", "profiles", "social network"],
