--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,10 @@ git:
   depth: 10
 
 php:
+  - 8
   - 7.3
-  - 7.2
-  - 5.6
+  #- 7.2
+  #- 5.6
 
 # WordPress comes from the Git mirror, where 'master' mirrors svn 'trunk' and
 # x.y mirrors the latest from the x.y branch
@@ -47,29 +48,29 @@ matrix:
     - php: 7.3
       env: WP_VERSION=master BP_TRAVISCI=travis:grunt
       #env: WP_VERSION=master BP_TRAVISCI=travis:grunt SNIFF=1
-    - php: 7.3
-      env: WP_VERSION=master BP_TRAVISCI=travis:grunt
-      #env: WP_VERSION=master BP_TRAVISCI=travis:phpcompat
-    - php: 5.3
-      env: WP_VERSION=4.8 BP_TRAVISCI=travis:grunt
-      #env: WP_VERSION=4.8 BP_TRAVISCI=travis:phpunit
-      dist: precise
-    - php: 5.3
-      env: WP_VERSION=4.7 BP_TRAVISCI=travis:grunt
-      #env: WP_VERSION=4.7 BP_TRAVISCI=travis:phpunit
-      dist: precise
-  exclude:
-    - php: 7.3
-      env: WP_VERSION=4.9 BP_TRAVISCI=travis:grunt
-      #env: WP_VERSION=4.9 BP_TRAVISCI=travis:phpunit
-    - php: 7.3
-      env: WP_VERSION=4.8 BP_TRAVISCI=travis:grunt
-      #env: WP_VERSION=4.8 BP_TRAVISCI=travis:phpunit
-    - php: 7.3
-      env: WP_VERSION=4.7 BP_TRAVISCI=travis:grunt
-      #env: WP_VERSION=4.7 BP_TRAVISCI=travis:phpunit
-    - php: 7.3
-      env: WP_VERSION=master BP_TRAVISCI=travis:grunt
+#    - php: 7.3
+#      env: WP_VERSION=master BP_TRAVISCI=travis:grunt
+#      #env: WP_VERSION=master BP_TRAVISCI=travis:phpcompat
+#    - php: 5.3
+#      env: WP_VERSION=4.8 BP_TRAVISCI=travis:grunt
+#      #env: WP_VERSION=4.8 BP_TRAVISCI=travis:phpunit
+#      dist: precise
+#    - php: 5.3
+#      env: WP_VERSION=4.7 BP_TRAVISCI=travis:grunt
+#      #env: WP_VERSION=4.7 BP_TRAVISCI=travis:phpunit
+#      dist: precise
+#  exclude:
+#    - php: 7.3
+#      env: WP_VERSION=4.9 BP_TRAVISCI=travis:grunt
+#      #env: WP_VERSION=4.9 BP_TRAVISCI=travis:phpunit
+#    - php: 7.3
+#      env: WP_VERSION=4.8 BP_TRAVISCI=travis:grunt
+#      #env: WP_VERSION=4.8 BP_TRAVISCI=travis:phpunit
+#    - php: 7.3
+#      env: WP_VERSION=4.7 BP_TRAVISCI=travis:grunt
+#      #env: WP_VERSION=4.7 BP_TRAVISCI=travis:phpunit
+#    - php: 7.3
+#      env: WP_VERSION=master BP_TRAVISCI=travis:grunt
       #env: WP_VERSION=master BP_TRAVISCI=travis:phpunit
 
 # before_install: Failures in this section will result in build status 'errored'
