--- a/.travis.yml
+++ b/.travis.yml
@@ -143,7 +143,7 @@ before_script:
   - npm install
 
 # Run tests
-script: grunt $BP_TRAVISCI
+script: grunt $BP_TRAVISCI --debug --verbose
 
 notifications:
   email: false
