package.json fixes

--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
 		"grunt-jsvalidate": "~0.2.2",
 		"grunt-legacy-util": "^1.1.1",
 		"grunt-patch-wordpress": "^1.0.0",
-		"grunt-rtlcss": "^2.0.2",
+		"grunt-rtlcss": "^2.0.1",
 		"grunt-sass": "~2.0.0",
 		"grunt-stylelint": "^0.8.0",
 		"grunt-wp-i18n": "^1.0.3",
-		"matchdep": "^2.0.0",
-		"node-sass": "^4.13.0",
+		"matchdep": "^1.0.1",
+		"node-sass": "^4.12.0",
 		"postcss-scss": "^1.0.5",
-		"stylelint": "^10.1.0",
-		"stylelint-config-wordpress": "^14.0.0"
+		"stylelint": "~7.10.1",
+		"stylelint-config-wordpress": "~11.0.0"
 	},
 	"engines": {
 		"node": ">=6.9.1"
