--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,8 @@ env:
 matrix:
   include:
     - php: 7.3
-      env: WP_VERSION=master BP_TRAVISCI=travis:grunt
-      #env: WP_VERSION=master BP_TRAVISCI=travis:grunt SNIFF=1
+      #env: WP_VERSION=master BP_TRAVISCI=travis:grunt
+      env: WP_VERSION=master BP_TRAVISCI=travis:grunt SNIFF=1
 #    - php: 7.3
 #      env: WP_VERSION=master BP_TRAVISCI=travis:grunt
 #      #env: WP_VERSION=master BP_TRAVISCI=travis:phpcompat
@@ -133,7 +133,7 @@ before_install:
 
 # before_script: Failures in this section will result in build status 'errored'
 before_script:
-  - if [[ "$SNIFF" == "1" ]]; then $PHPCS_DIR/bin/phpcs -p . --standard=WordPress --ignore=*/vendor/* src/; fi
+  - if [[ "$SNIFF" == "1" ]]; then $PHPCS_DIR/bin/phpcs -p . src/; fi
 #  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.3" ]]; then composer global require --dev phpunit/phpunit ^4; fi
 #  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.6" ]]; then composer global require --dev phpunit/phpunit ^5; composer install; fi
 #  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.2" ]]; then composer global require --dev phpunit/phpunit ^6; composer install; fi
