--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"grunt-wp-i18n": "^1.0.3",
 		"matchdep": "^2.0.0",
 		"node-sass": "^4.14.0",
+		"postcss": "^7.0.28",
 		"postcss-scss": "^2.0.0",
 		"stylelint": "~13.3.3",
 		"stylelint-config-wordpress": "~16.0.0"
