added apidoc with grunt command

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"description": "BuddyBoss adds community features to WordPress. Member Profiles, Activity Streams, Direct Messaging, Notifications, and more!",
 	"devDependencies": {
 		"grunt": "^1.1.0",
+		"grunt-apidoc": "^0.11.0",
 		"grunt-check-dependencies": "~1.0.0",
 		"grunt-checktextdomain": "~1.0.1",
 		"grunt-contrib-clean": "~2.0.0",
