--- a/composer.json
+++ b/composer.json
@@ -31,16 +31,20 @@
 		"php": ">=5.3.0",
 		"phpunit/phpunit": "6.1.0"
 	},
+	"require-dev": {
+	  "symfony/var-dumper": "^4.2",
+	  "dealerdirect/phpcodesniffer-composer-installer": "*",
+	  "phpcompatibility/phpcompatibility-wp": "^2.1",
+	  "squizlabs/php_codesniffer": "^3.4.0",
+	  "wp-coding-standards/wpcs": "*"
+	},
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-ld": "TEST_LEARNDASH=yes vendor/bin/phpunit --testsuite=learndash",
-	  	"lint-setup": "phpcs --config-set installed_paths vendor/wp-coding-standards/wpcs --standard=phpcs.xml",
-	    "lint": "phpcs --standard=phpcs.xml"
-	},
-	"require-dev": {
-		"symfony/var-dumper": "^4.2",
-		"squizlabs/php_codesniffer": "*",
-		"wp-coding-standards/wpcs": "^2.3",
-		"phpcompatibility/phpcompatibility-wp": "^2.1"
+		"install-hooks": ["sh ./contrib/setup.sh"],
+		"post-install-cmd": ["@install-hooks"],
+		"post-update-cmd": ["@install-hooks"],
+		"lint": "vendor/bin/phpcs -s",
+		"lint-fix": "vendor/bin/phpcbf"
 	}
 }
